Fix display issue (lack of spacing) between recipe photo and nutrition facts table when viewing on mobile

--- a/app/static/recipe-detail.css
+++ b/app/static/recipe-detail.css
@@ -384,6 +384,7 @@
 table { 
 	border-collapse: collapse; 
 	table-layout: fixed;
+	margin-top: 16px;
 	margin-bottom: 16px;
 	width: 100%;
 }
